Read all names in num store
